add_subdirectory(astcenc)
add_subdirectory(spirv_cross)
add_subdirectory(ktx)
add_subdirectory(basis_universal)
add_subdirectory(bmp)
add_subdirectory(camera)
add_subdirectory(csg)
add_subdirectory(cvtt)
add_subdirectory(dds)
add_subdirectory(enet)
add_subdirectory(etcpak)
add_subdirectory(freetype)
add_subdirectory(gdscript)
add_subdirectory(glslang)
add_subdirectory(gltf)
add_subdirectory(gridmap)
add_subdirectory(hdr)
add_subdirectory(jpg)
add_subdirectory(jsonrpc)
add_subdirectory(lightmapper_rd)
add_subdirectory(mbedtls)
add_subdirectory(meshoptimizer)
add_subdirectory(minimp3)
add_subdirectory(mobile_vr)

# TODO: broken
# add_subdirectory(mono)

add_subdirectory(msdfgen)
add_subdirectory(multiplayer)
add_subdirectory(navigation)
add_subdirectory(noise)
add_subdirectory(ogg)
add_subdirectory(openxr)
add_subdirectory(raycast)
add_subdirectory(regex)
add_subdirectory(squish)
add_subdirectory(svg)
add_subdirectory(text_server_adv)
add_subdirectory(text_server_fb)
add_subdirectory(tga)
add_subdirectory(theora)
add_subdirectory(tinyexr)
add_subdirectory(upnp)
add_subdirectory(vhacd)
add_subdirectory(vorbis)
add_subdirectory(webp)
add_subdirectory(webrtc)
add_subdirectory(websocket)
add_subdirectory(webxr)
add_subdirectory(xatlas_unwrap)
add_subdirectory(zip)
