# the other would be to define GDEXTENSION when building modules as an extension
add_compile_definitions(GODOT_MODULE)

if (WANT_EDITOR)
    add_subdirectory(astcenc)
endif ()
add_subdirectory(spirv_cross)
add_subdirectory(ktx)
add_subdirectory(basis_universal)
add_subdirectory(bmp)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    add_subdirectory(camera)
endif ()
add_subdirectory(csg)
if (WANT_EDITOR)
    add_subdirectory(cvtt)
endif ()
add_subdirectory(dds)
add_subdirectory(enet)
if (WANT_EDITOR)
    add_subdirectory(etcpak)
endif ()
add_subdirectory(fbx)
add_subdirectory(freetype)
add_subdirectory(gdscript)
add_subdirectory(glslang)
add_subdirectory(gltf)
add_subdirectory(gridmap)
add_subdirectory(hdr)
add_subdirectory(interactive_music)
add_subdirectory(jpg)
add_subdirectory(jsonrpc)
if (WANT_EDITOR)
    add_subdirectory(lightmapper_rd)
endif ()
add_subdirectory(mbedtls)
add_subdirectory(meshoptimizer)
add_subdirectory(minimp3)
add_subdirectory(mobile_vr)

# TODO: broken
# add_subdirectory(mono)

add_subdirectory(msdfgen)
add_subdirectory(multiplayer)
add_subdirectory(navigation)
add_subdirectory(noise)
add_subdirectory(ogg)
if (WANT_OPENXR)
    add_subdirectory(openxr)
endif ()
add_subdirectory(raycast)
add_subdirectory(regex)
add_subdirectory(squish)
add_subdirectory(svg)
add_subdirectory(text_server_adv)
add_subdirectory(text_server_fb)
add_subdirectory(tga)
add_subdirectory(theora)
if (WANT_EDITOR)
    add_subdirectory(tinyexr)
endif ()
add_subdirectory(upnp)
add_subdirectory(vhacd)
add_subdirectory(vorbis)
add_subdirectory(webp)
add_subdirectory(webrtc)
add_subdirectory(websocket)
add_subdirectory(webxr)
if (WANT_EDITOR)
    add_subdirectory(xatlas_unwrap)
endif ()
add_subdirectory(zip)
